--- a/package.json
+++ b/package.json
@@ -1,11 +1,31 @@
 {
   "name": "mangle-css-class-webpack-plugin-xpc",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "mangle css webpack",
+  "main": "dist/index.cjs",
+  "module": "dist/index.mjs",
+  "type": "module",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/pengcheng933/mangle-css-class-webpack-plugin-xpc"
+  },
+  "exports": {
+    ".": {
+      "require": "./dist/index.cjs",
+      "import": "./dist/index.mjs"
+    }
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rollup -c --bundleConfigAsCjs"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "chalk": "^5.3.0"
+  },
+  "devDependencies": {
+    "@rollup/plugin-commonjs": "^28.0.0",
+    "rollup": "^4.24.0",
+    "rollup-plugin-terser": "^7.0.2"
+  }
 }
